sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:20: error: not found: value currBase
        var currVal = nbBasesParcourir(currBase, currPos);
                                       ^NaiveBaseball:29: error: not found: value currBase
   move(currBase, idMax);
        ^